common value for message

--- a/conf.yml
+++ b/conf.yml
@@ -82,7 +82,8 @@
 - title: FOSDEM
   url: https://fosdem.org/
   startdate: 30.01.2016
-  cfpdate: none
+  cfpdate: 09.10.2015
+  cfpurl: https://fosdem.org/2016/news/2015-09-24-call-for-participation/
   location: Belgium, Brussels
 
 - title: FOSSASIA
