Add checks for CFP date, add email addr to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
   - pykwalify --data-file conf.yml --schema-file schema.yaml
 
 notifications:
-  email: false
+  email: sergeyb@openvz.org
