Fix absent value

--- a/conf.yml
+++ b/conf.yml
@@ -306,7 +306,7 @@
 
 - title: Open Source Day
   url: http://opensourceday.com/
-  startdate:
+  startdate: none
   cfpdate: none
   cfpurl: none
   location: Warsaw, Poland
