update location for hgoscon

--- a/conf.yml
+++ b/conf.yml
@@ -183,7 +183,7 @@
   startdate: 24.06.2016
   cfpdate: 28.02.2016
   cfpurl: http://2016.opensource.hk/cfp/
-  location: Cologne, Germany
+  location: Hong Kong
 
 - title: International Conference on Open Source Systems
   url: http://oss2016.org/
